--- a/project/views/page/buytogether.html.twig
+++ b/project/views/page/buytogether.html.twig
@@ -14,7 +14,6 @@
 <script src="/plugins/bootstrap3-editable/js/bootstrap-editable.js"></script>
 <script>
     $(document).ready(function () {
-        $.fn.editable.defaults.mode = 'inline';
         $.fn.editableform.buttons =
             '<button type="submit" class="form-control btn btn-primary editable-submit">'+
                 '<i class="glyphicon glyphicon-ok"></i>'+
@@ -52,66 +51,10 @@
         {'id': 'price-section', 'title': 'Цена'},
     ]) }}
 
-    <section id="overview-section" class="overview-section section">
-        <h2 class="section-title">
-            {{ data.text(page, 'devicesSection.title') }}
-        </h2>
+    {% for key, section in page.sections %}
+        {{ components.overviewSection(section, page.slug, 'sections.' ~ key, editMode) }}
+    {% endfor %}
 
-        <div class="section-intro">
-            {{ data.textarea(page, 'devicesSection.description') }}
-        </div><!--//section-intro-->
-        <div class="figures-wrapper">
-            <div class="container text-center">
-                <figure class="macbook-screen"><img class="img-responsive" src="/startup-kit/images/macbook-screen.png" alt=""></figure>
-                <figure class="ipad-screen"><img class="img-responsive" src="/startup-kit/images/ipad-screen.png" alt=""></figure>
-                <figure class="iphone-screen"><img class="img-responsive" src="/startup-kit/images/iphone-screen.png" alt=""></figure>
-                {#<a href="#" type="button" class="play-icon" data-toggle="modal" data-target="#modal-video"><img src="/startup-kit/images/play-icon-md.svg" alt=""></a>#}
-            </div><!--//container-->
-        </div><!--//figures-wrapper-->
-        <div class="benefits-wrapper">
-            <div class="container text-center">
-                <div class="row">
-                    <div class="item col-xs-12 col-sm-4">
-                        <div class="item-inner">
-                            <img class="item-icon" src="/startup-kit/images/icons/clock-white.svg" alt="">
-                            <h3 class="item-title">Удобно покупателю</h3>
-                            <div class="item-desc">
-                                Визуально сервис похож на интернет-магазин и покупателю понятно как делать закупки, даже если он пришёл на сайт впервые. Кроме того, он сам может добавить товар с сайта поставщика и добавить его в заказ.
-                            </div>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item col-xs-12 col-sm-4">
-                        <div class="item-inner">
-                            <img class="item-icon" src="/startup-kit/images/icons/presenter-white.svg" alt="">
-                            <h3 class="item-title">Удобно организатору</h3>
-                            <div class="item-desc">
-                                Все расчёты, оплата, подтверждения оплат автоматизированны. Организатору не надо самому следить за каждым покупателем, проверять оплатил он или нет, вести отдельную Excel-табличку. Сервис сам посчитает, кто оплатил, кто нет, какая сумма набрана и остальные вещи.
-                            </div>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                    <div class="item col-xs-12 col-sm-4">
-                        <div class="item-inner">
-                            <img class="item-icon" src="/startup-kit/images/icons/chat-white.svg" alt="">
-                            <h3 class="item-title">Сервис развивается так, как хотите вы</h3>
-                            <div class="item-desc">
-                                Вы влияете на функционал сервиса. Для того, чтобы сервис был удобнее для вас и учитывал и автоматизировал особенности вашей организации, сообщайте нам, как бы вы хотели видеть сервис в ближайшем будущем. Мы обсудим и сделаем то, что вам нужно.
-                            </div>
-                        </div><!--//item-inner-->
-                    </div><!--//item-->
-                </div><!--//row-->
-            </div><!--//container-->
-        </div><!--//benefits-->
-        {#<div class="press-wrapper">
-            <div class="container">
-                <div class="logos row">
-                    <div class="logo col-xs-6 col-sm-3"><img class="img-responsive" src="/startup-kit/images/logos/logo-1.svg" alt=""></div>
-                    <div class="logo col-xs-6 col-sm-3"><img class="img-responsive" src="/startup-kit/images/logos/logo-2.svg" alt=""></div>
-                    <div class="logo col-xs-6 col-sm-3"><img class="img-responsive" src="/startup-kit/images/logos/logo-3.svg" alt=""></div>
-                    <div class="logo col-xs-6 col-sm-3"><img class="img-responsive" src="/startup-kit/images/logos/logo-4.svg" alt=""></div>
-                </div>
-            </div><!--//container-->
-        </div><!--//press-wrapper-->#}
-    </section><!--//overview-section-->
 
 
     <div class="feature-blocks container">
