--- a/project/views/components/data.html.twig
+++ b/project/views/components/data.html.twig
@@ -10,17 +10,17 @@
 {% macro text(value, slug, path, editMode = false) %}
     {% import _self as data %}
     {% if editMode %}
-        <e data-type="text" data-url="/change" data-pk="{{ slug }}" data-name="{{ path }}">{{ value }}</e>
+        <e data-type="text" data-url="/change" data-pk="{{ slug }}" data-name="{{ path }}">{{ value | raw }}</e>
     {% else %}
-        {{- value -}}
+        {{- value | raw -}}
     {% endif %}
 {% endmacro %}
 
 {%- macro textarea(value, slug, path, editMode = false) -%}
     {%- import _self as data -%}
     {%- if editMode -%}
-        <e data-type="textarea" data-url="/change" data-pk="{{ slug }}" data-name="{{ path }}">{{ value }}</e>
+        <e data-type="textarea" data-url="/change" data-pk="{{ slug }}" data-name="{{ path }}">{{ value | raw }}</e>
     {%- else -%}
-        {{- value -}}
+        {{- value | raw -}}
     {%- endif -%}
 {% endmacro %}
