--- a/project/views/components/components.html.twig
+++ b/project/views/components/components.html.twig
@@ -26,7 +26,7 @@
                     <div class="item col-xs-12 col-sm-4">
                         <div class="item-inner">
                             <img class="item-icon" src="/startup-kit/images/icons/clock-white.svg" alt="">
-                            <h3 class="item-title">{{ data.text(sectionData.benefits.0.title, slug, path ~ '.benefits.0.title', editMode) }}</h3>
+                            <h3 class="item-title">{{ data.text(sectionData.benefits.0.title, slug, path ~ '.benefits.0.title', editMode, "Ввеодите заголовок преимущества") }}</h3>
                             <div class="item-desc">
                                 {{ data.textarea(sectionData.benefits.0.description, slug, path ~ '.benefits.0.description', editMode) }}
                             </div>
