--- a/project/views/components/data.html.twig
+++ b/project/views/components/data.html.twig
@@ -7,10 +7,10 @@
     {{- value | raw -}}
 {%- endmacro -%}
 
-{% macro text(value, slug, path, editMode = false) %}
+{% macro text(value, slug, path, editMode = false, title = "") %}
     {% import _self as data %}
     {% if editMode %}
-        <e data-type="text" data-url="/change" data-pk="{{ slug }}" data-name="{{ path }}">{{ value | raw }}</e>
+        <e data-type="text" data-url="/change" data-pk="{{ slug }}" data-name="{{ path }}" data-title="{{ title | raw }}">{{ value | raw }}</e>
     {% else %}
         {{- value | raw -}}
     {% endif %}
@@ -22,5 +22,14 @@
         <e data-type="textarea" data-url="/change" data-pk="{{ slug }}" data-name="{{ path }}">{{ value | raw }}</e>
     {%- else -%}
         {{- value | raw -}}
+    {%- endif -%}
+{% endmacro %}
+
+{%- macro a(value, slug, path, editMode = false, attrs = {}) -%}
+    {%- import _self as data -%}
+    {%- if editMode -%}
+        <e data-type="link" data-url="/change" data-pk="{{ slug }}" data-name="{{ path }}" data-value="{url: '{{ value.url | raw }}', text: '{{ value.text | raw }}'}">{{ value.text | raw }}</e>
+    {%- else -%}
+        <a href="{{ value.url | raw }}"{% for key,val in attrs %} {{ key | raw }}="{{ val | raw }}"{% endfor %} data-url="/change" data-pk="{{ slug }}" data-name="{{ path }}">{{ value.text | raw }}</a>
     {%- endif -%}
 {% endmacro %}
